Criando home e modal

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ a {
 }
 
 .container {
-  max-width: 50rem;
+  max-width: 70rem;
   padding: 0 1rem;
   margin: 0 auto;
 }
@@ -67,7 +67,7 @@ a {
   display: block;
   width: 1.5rem;
   height: 1.5rem;
-  background: #fb1;
+  background: #4c64fd;
   position: absolute;
   bottom: 5px;
   left: -5px;
