--- a/src/Components/Forms/Input.module.css
+++ b/src/Components/Forms/Input.module.css
@@ -16,9 +16,9 @@
 .input:focus,
 .input:hover {
   outline: none;
-  border-color: #fb1;
+  border-color: #4c64fd;
   background: white;
-  box-shadow: 0 0 0 3px #fea;
+  box-shadow: 0 0 0 3px #8f9eff;
 }
 
 .label {
