--- a/src/Components/Forms/Button.module.css
+++ b/src/Components/Forms/Button.module.css
@@ -4,8 +4,8 @@
   cursor: pointer;
   border: none;
   border-radius: 0.4rem;
-  background: #fb1;
-  color: #764701;
+  background: #4c64fd;
+  color: #ffffff;
   min-width: 8rem;
   padding: 0.8rem 1.2rem;
   box-sizing: border-box;
@@ -15,7 +15,7 @@
 .button:hover,
 .button:focus {
   outline: none;
-  box-shadow: 0 0 0 3px #fea, 0 0 0 4px #fb1;
+  box-shadow: 0 0 0 3px #8f9eff, 0 0 0 4px #4c64fd;
 }
 
 .button:disabled {
