--- a/src/Components/Modal.module.css
+++ b/src/Components/Modal.module.css
@@ -6,8 +6,17 @@
   left: 0px;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1000;
   padding: 2rem calc(4rem + 15px) 2rem 4rem;
+}
+
+.content {
+  width: 500px;
+  height: 500px;
+  border-radius: 4px;
+  background-color: #efefef;
 }
 
 @media (max-width: 40rem) {
