--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
@@ -31,4 +31,4 @@
   margin-left: 0.5rem;
   position: relative;
   top: 2px;
-}
+} */
