--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap");
+@import "primereact/resources/themes/lara-light-cyan/theme.css";
+@import "primeicons/primeicons.css";
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  padding-top: 4rem;
   margin: 0px;
-  color: #333;
-  --type-first: Helvetica, Arial, sans-serif;
-  --type-second: "Spectral", Georgia;
-  font-family: var(--type-first);
 }
 
 h1,
@@ -34,45 +31,51 @@ img {
   max-width: 100%;
 }
 
-button,
-input {
-  display: block;
-  font-size: 1rem; /* 1rem = 16px */
-  font-family: var(--type-first);
-  color: #333;
-}
-
-a {
-  text-decoration: none;
-  color: #333;
-}
-
 .container {
-  max-width: 70rem;
+  max-width: 100rem;
   padding: 0 1rem;
   margin: 0 auto;
 }
 
-.title {
-  font-family: var(--type-second);
-  line-height: 1;
-  font-size: 3rem;
-  margin: 1rem 0;
-  position: relative;
-  z-index: 1;
+.grid {
+  display: grid;
 }
 
-.title::after {
-  content: "";
-  display: block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background: #4c64fd;
-  position: absolute;
-  bottom: 5px;
-  left: -5px;
-  border-radius: 0.2rem;
-  z-index: -1;
+.grid-template-areas {
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: 75px 89vh 50px;
+  grid-template-areas:
+    "logo nav nav"
+    "sidenav content content"
+    "sidenav footer footer";
+}
+
+.item {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.logo {
+  grid-area: logo;
+  background-color: #3f3c3c;
+}
+
+.nav {
+  grid-area: nav;
+}
+
+.content {
+  grid-area: content;
+}
+
+.sidenav {
+  grid-area: sidenav;
+  background-color: #3f3c3c;
+  color: #fff;
+}
+
+.footer {
+  grid-area: footer;
 }
 
 .animeLeft {
