--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -15,6 +15,21 @@
   align-items: center;
 }
 
+.menu {
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.tables {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
 @media (max-width: 40rem) {
   .home {
     justify-content: space-around;
