Melhorando tela de membros

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -40,7 +40,7 @@ li {
 
 .box {
   padding: var(--gap);
-  border-radius: var(--gap);
+  border-radius: var(--gap-s);
   background: var(--color-6);
 }
 
