--- a/src/Styles.css
+++ b/src/Styles.css
@@ -158,6 +158,12 @@ li {
   }
 }
 
+@media (max-width: 1000px) {
+  .modal {
+    width: auto;
+  }
+}
+
 @media (max-width: 700px) {
   html {
     --gap-s: 0.5rem;
